# Motor_Insurance_AgenticAI

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  env.example  main.py  pyproject.toml
.streamlit/: config.toml
customer_support_agent/api/: chat.py  customers.py  deps.py  health.py  ingestion.py  tickets.py
customer_support_agent/core/: __init__.py  db.py  logging_config.py  observability.py  retry.py  settings.py  tracing.py
customer_support_agent/graph/: __init__.py  build_graph.py  chat_agent.py  chat_tools.py  llm.py  nodes.py  state.py  tools.py
customer_support_agent/integrations/: __init__.py  policy_parser.py  rag.py
customer_support_agent/models/: __init__.py  agent.py  base.py  customer.py  customer_policy.py  enums.py  escalation.py  feedback.py  interaction.py  policy_document.py  ticket.py  ticket_message.py
customer_support_agent/repositories/: __init__.py  agent_repository.py  base.py  customer_policy_repository.py  (+7 more)
knowledge_base/: motor_comprehensive_policy_v3_2.md  motor_third_party_policy_v1_0.md
logs/: error.txt
scripts/: diagnose_langsmith.py  diagnose_tool_calling.py  ingest.py  init_db.py  seed_customers.py  test_agent.py
tests/: conftest.py  test_agent_graph.py  test_agent_nodes.py  test_agent_tools.py  test_api.py  test_api_chat.py  test_api_customers.py  test_api_tickets.py  test_chat_agent.py  test_chat_tools.py  test_logging.py  test_models.py  test_policy_parser.py  test_rag_ingestion.py  test_repositories.py  test_seed_data.py
ui/: agent_console.py  api_client.py  customer_portal.py  theme.py
(+4 files in other folders)
