[project]
name = "motor-insurance-agenticai"
version = "0.1.0"
description = "AI-powered customer support resolution agent for motor insurance (IITM Agentic AI capstone)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "openai>=2.45.0",
    "pinecone>=9.1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.2",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["customer_support_agent"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
